--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "1.0.0-beta.43",
+    "firebase": "^5.0.2",
     "history": "4.7.2",
     "material-ui": "1.0.0-beta.45",
     "moment": "2.22.1",
@@ -16,7 +17,8 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
     "react-slick": "0.23.1",
-    "react-swipeable-views": "0.12.13"
+    "react-swipeable-views": "0.12.13",
+    "react-text-mask": "^5.4.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
