--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "1.0.0-beta.43",
     "firebase": "^5.0.2",
     "history": "4.7.2",
