--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "1.0.0-beta.43",
+    "chartist": "^0.11.0",
     "firebase": "^5.0.2",
     "history": "4.7.2",
     "material-ui": "1.0.0-beta.45",
@@ -12,6 +13,7 @@
     "node-sass-chokidar": "1.2.2",
     "npm-run-all": "4.1.2",
     "react": "16.3.1",
+    "react-chartist": "^0.13.1",
     "react-datetime": "2.14.0",
     "react-dom": "16.3.1",
     "react-nouislider": "2.0.1",
