--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartist": "^0.13.1",
     "react-datetime": "2.14.0",
     "react-dom": "16.3.1",
+    "react-firebase-file-uploader": "^2.4.1",
     "react-nouislider": "2.0.1",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
