--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "1.0.0-beta.43",
     "chartist": "^0.11.0",
     "firebase": "^5.0.2",
+    "google-maps-react": "^2.0.2",
     "history": "4.7.2",
     "material-ui": "1.0.0-beta.45",
     "moment": "2.22.1",
@@ -17,7 +18,9 @@
     "react-datetime": "2.14.0",
     "react-dom": "16.3.1",
     "react-firebase-file-uploader": "^2.4.1",
+    "react-google-autocomplete": "^1.0.16",
     "react-nouislider": "2.0.1",
+    "react-places-autocomplete": "^7.1.2",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
     "react-slick": "0.23.1",
